assigne test completed